加mod config更新，空岛生成测试无误

--- a/config/skyblockbuilder/structures.json5
+++ b/config/skyblockbuilder/structures.json5
@@ -19,8 +19,6 @@
   // This is a resource list. See https://moddingx.org/libx/org/moddingx/libx/util/data/ResourceList.html#use_resource_lists_in_configs
   "generationStructures": {
     "allow_list": true,
-    "elements": [
-      "minecraft:fortress"
-    ]
+    "elements": []
   }
 }
