--- a/config/skyblockbuilder/world.json5
+++ b/config/skyblockbuilder/world.json5
@@ -6,9 +6,7 @@
   "biomes": {
     "minecraft:overworld": {
       "allow_list": false,
-      "elements": [
-        "minecraft:*ocean*"
-      ]
+      "elements": []
     },
     "minecraft:the_nether": {
       "allow_list": false,
